# OpenGL_Ferris-Wheel

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Cameras/: camera.h  fixedCamera.h  orbitCamera.h
Dependencies/assimp/code/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Meshes/: mesh.h
Model/: model.h
Models/: model.h
Resources/Models/container/: cube.mtl
Resources/Models/ferris wheel/: ferris_wheel.mtl
Resources/Models/ferris_wheel/: ferris wheel base.mtl
Resources/Models/ferris_wheel_base/: ferris_wheel_base.mtl
Resources/Models/ferris_wheel_cart/: Crate1.mtl
Resources/Models/square/: square.mtl
Shaders/: light.cube.shader.fs  light.multiple.shader.fs  light.multiple.shader.vs  shader_s.h
